<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/Total"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/resume_total"
            android:gravity="right"
            android:padding="3dip"
            android:textSize="17sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/MenuToMe"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/resume_tome"
            android:gravity="right"
            android:padding="3dip"
            android:textSize="17sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/MenuToOther"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/resume_toothers"
            android:gravity="right"
            android:padding="3dip"
            android:textSize="17sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/ResumeExpiredLoans"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/resume_limite_depassee"
            android:gravity="right"
            android:padding="3dip"
            android:textSize="17sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>